# Platyrhynchos

./: .gitignore  .gitmodules  CODE-OF-CONDUCT.md  README.md  bib.py  bibTest.py  index.html  lib_test.py  pyproject.toml  requirements.txt  search with removing.py  search.py  settings.toml  template.secrets.toml  tests.py  visualize.py  wordfind.py
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: format.yml  ossar.yml  pytest.yml  testing-formating.yml
analysis/: .RData  .Rhistory  read.Rmd  read.nb.html
app/: index.html  package-lock.json  package.json  webpack.config.js
app-react/: .babelrc  package-lock.json  package.json  webpack.config.js
app-react/public/: index.html
app-react/src/: App.js  App.tsx  duck.ts  index.tsx  py-worker.js
app/src/: duck.js  index.js  loadpy.js  spinner.css  supabase.js
benchmarks/: direct.py  local_search.py  simulated_annealing.py
data/finish/: prezent.csv
data/process/: prezent.csv
deploy/: index.html
examples/: __init__.py  crossword.md  lib_test.py
libs/: colrow.py  crossword.py  crossword_addable.py  crossword_improvable.py  exceptions.py  utils.py
libs/cruciverbalists/: base.py
platyrhynchos/: __init__.py  exceptions.py  logger.py  scripts.py  search with removing.py  search.py  visualize.py
platyrhynchos/commons/: alphabit.py  exceptions.py  logger.py  misc.py  settings.py  utils.py
platyrhynchos/crossword/: __init__.py  addable.py  base.py  colrow.py  exolve_template.py  improvable.py  no_conflict.py  word.py
platyrhynchos/cruciverbalist/: __init__.py  base.py  en_simple.py  exclusive_word_base.py  letter_frequency_en.py  local_goal.py  old_base.py
platyrhynchos/cruciverbalists/: __init__.py  base.py  en_simple.py
platyrhynchos/director/: direct_search.py  local_search.py  simulated_annealing.py
platyrhynchos/exclusive/: __init__.py  cpython.py  pyiodide.py  pyodide.py
platyrhynchos/libs/: colrow.py  crossword.py  crossword_addable.py  crossword_improvable.py  utils.py
platyrhynchos/libs/cruciverbalists/: base.py  en_simple.py
platyrhynchos/optimize/: old.py
platyrhynchos/runners/: direct.py  old_w_removing.py
tests/: addable.py.old  test_addable.py  test_crossword_improvable.py  test_en_cruciverbalist.py  test_exolve_template.py  test_letter_frequency_en_cruciverbalist.py  test_settings.py
