[tool.poetry]
name = "platyrhynchos"
version = "0.1.1"
description = """We propose a word-centric crossword generation method. This can be viewed as an alternative to the method proposed by Bonomo, Lauf and Yampolskiy or Bulitko and Botea, who focus on generating matrices filled with letters and mutating them in order to make them into actual crosswords. The first method uses a combination of first improvement and best improvement local search methods to concatenate together crosswords. The choice on which one to use is made using the temperature calculated for a given turn. Second algorithm is a simulated annealing algorithm which uses best improvement search and word removal operation. The crosswords are evaluated using a goal function that includes the amount of intersections in a crossword and the density of letters in the crossword."""
authors = [
    "Jakub Dakowski <jakubdakowski@gmail.com>",
    "Piotr Jaworski",
    "Jan Pielesiak",
    "Waldemar Wojna"
]
license = "CC BY-NC-SA 4.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10.10,<3.12"
# ^This is because of functiontrace
keyboard = "^0.13.5"
platformdirs = "^3.5.1"
loguru = "^0.7.0"
requests = {version = "^2.31.0", markers = "sys_platform != 'emscripten'"}
tqdm-loggable = "^0.1.3"
bitarray = "^2.7.3"
duckdb = {version = "^0.8.0", markers = "sys_platform != 'emscripten'"}
dynaconf = "^3.1.12"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pytest = "^7.3.1"
ipykernel = "^6.22.0"
functiontrace = "^0.3.7"
autoflake = "^2.1.1"
boto3 = "^1.26.142"

[tool.poetry.scripts]
en-download = "platyrhynchos.scripts:en_simple_prep"

[tool.pytest.ini_options]
minversion = "7.2"
addopts = "--doctest-glob=\"*.md\""
testpaths = [
    "doctests",
    "tests"
]

[tool.coverage.run]
omit = [
    "tests/*",
    "analysis/*",
    "benchmarks/*"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
